# tidal-fdg-patterns

./: .gitignore  README.md  tidal-fdg-patterns.cabal
src/Sound/Tidal/Fdg/: BassDrum.hs  Bassline.hs  Clap.hs  ClosedHat.hs  Crash.hs  HighTom.hs  LowTom.hs  MidTom.hs  OpenHat.hs  Ride.hs  Rim.hs  Snare.hs
src/Sound/Tidal/Fdg/Presets/: Sh101.hs
